--- a/my_webapp/pubspec.yaml
+++ b/my_webapp/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   shared_preferences: ^2.0.15
   flutter_math_fork: ^0.6.3+1
+  function_tree: ^0.8.13
 
 dev_dependencies:
   flutter_test:
